add section on trait judgements

--- a/refs.bib
+++ b/refs.bib
@@ -166,3 +166,48 @@ url = {http://www.springerlink.com/index/10.3758/BRM.40.1.109},
 volume = {40},
 year = {2008}
 }
+
+@article{Willis2006,
+author = {Willis, Janine and Todorov, Alexander},
+file = {:home/whn/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Willis, Todorov - 2006 - Making Up Your Mind After a 100-Ms Exposure to a Face(2).pdf:pdf},
+mendeley-groups = {mag\_dsv},
+number = {7},
+pages = {592--599},
+title = {{Making Up Your Mind After a 100-Ms Exposure to a Face}},
+volume = {17},
+year = {2006}
+}
+
+@article{Todorov2009,
+author = {Todorov, Alexander and Pakrashi, Manish and Oosterhof, Nikolaas N.},
+doi = {10.1521/soco.2009.27.6.813},
+file = {:home/whn/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Todorov, Pakrashi, Oosterhof - 2009 - Evaluating Faces on Trustworthiness After Minimal Time Exposure.pdf:pdf},
+issn = {0278-016X},
+journal = {Social Cognition},
+mendeley-groups = {kindle,KinSync Folder},
+month = dec,
+number = {6},
+pages = {813--833},
+title = {{Evaluating Faces on Trustworthiness After Minimal Time Exposure}},
+url = {http://guilfordjournals.com/doi/abs/10.1521/soco.2009.27.6.813},
+volume = {27},
+year = {2009}
+}
+
+\@article{Brasseur2013,
+abstract = {Emotional Competence (EC), which refers to individual differences in the identification, understanding, expression, regulation and use of one's own emotions and those of others, has been found to be an important predictor of individuals' adaptation to their environment. Higher EC is associated with greater happiness, better mental and physical health, more satisfying social and marital relationships and greater occupational success. While it is well-known that EC (as a whole) predicts a number of important outcomes, it is unclear so far which specific competency(ies) participate(s) in a given outcome. This is because no measure of EC distinctly measures each of the five core emotional competences, separately for one's own and others' emotions. This lack of information is problematic both theoretically (we do not understand the processes at stake) and practically (we cannot develop customized interventions). This paper aims to address this issue. We developed and validated in four steps a complete (albeit short: 50 items) self-reported measure of EC: the Profile of Emotional Competence. Analyses performed on a representative sample of 5676 subjects revealed promising psychometric properties. The internal consistency of scales and subscales alike was satisfying, factorial structure was as expected, and concurrent/discriminant validity was good.},
+author = {Brasseur, Sophie and Gr\'{e}goire, Jacques and Bourdu, Romain and Mikolajczak, Mo\"{\i}ra},
+doi = {10.1371/journal.pone.0062635},
+file = {:home/whn/tmp/journal.pone.0062635.pdf:pdf},
+issn = {1932-6203},
+journal = {PloS one},
+keywords = {Adolescent,Adult,Aged,Aged, 80 and over,Cognition,Emotional Intelligence,Female,Happiness,Health,Humans,Male,Middle Aged,Psychometrics,Self Report,Young Adult},
+month = jan,
+number = {5},
+pages = {e62635},
+pmid = {23671616},
+title = {{The Profile of Emotional Competence (PEC): development and validation of a self-reported measure that fits dimensions of emotional competence theory.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3646043\&tool=pmcentrez\&rendertype=abstract},
+volume = {8},
+year = {2013}
+}
