--- a/outline.org
+++ b/outline.org
@@ -62,12 +62,12 @@
   (BART) as means by emotion recognition can be measured. One trial in
   the BART paradigm consists of a display of an emotional facial
   expression with forward- and backward masks of a neutral emotional
-  face to avoid after images \cite{Ekman2003}.
+  face to avoid after-images \citep{Ekman2003}.
 
    
 ** Research problem
    Testing and training applications being a central part of
-   micro-expression research \cite{Ekman1992}. However, despite
+   micro-expression research \citep{Ekman1992}. However, despite
    multiple several studies being made \citep[e. g.][]{Schlegel2012},
    there exists no standard for testing emotion recognition using
    micro-expressions.
@@ -92,10 +92,12 @@
 
 
 ** Emotional intelligence
+*** Uses of emotional intelligence
+    
 *** Validity concerns
     Measuring emotional intelligence has seen a number of different
     uses. One of the things where tests of emotional intelligence have
-    been applied in testing for autism.\parencite{Baron-Cohen2001}. 
+    been applied in testing for autism \parencite{Baron-Cohen2001}. 
 
     Moreover it the emotional intelligence scales have been used for
     corporate recruiting for roles requiring social interaction.
@@ -140,7 +142,20 @@
     for facial expressions of happiness and neutral expressions are
     much higher than those of other the expressions
     \citep{Calvo2008a}. Care must therefore be taken so as to avoid
-    ceiling effects for happiness in particular.
+    ceiling effects for happiness in particular
+
+*** Trait Judgements
+    Another strand of research has gone into the split-second trait
+    judgements made upon viewing a face. \cite{Willis2006} found very
+    strong correlations between judgements of trustworthyness made
+    after \SI{100}{\milli\second} or \SI{100}{\milli\second} versus
+    those made without any time-constraint. Moreover, no significant
+    difference was found between the \SI{100}{\milli\second} and
+    \SI{500}{\milli\second} conditions, suggesting that a trait
+    judgement is performed very quickly. This was further expanded by
+    \citet{Todorov2009}, finding that accuracy with display times up
+    to \SI{100}{\milli\second}, after which the growth rate is
+    dramatically slower.
 
 
 * Methodology and Methods for Data collection
