add siunits package

--- a/preamble.tex
+++ b/preamble.tex
@@ -11,5 +11,6 @@
 \usepackage[citestyle=apa,bibstyle=apa,hyperref=true,maxcitenames=3,url=true,backend=biber,natbib=true]{biblatex}
 \usepackage[american]{babel}
 \usepackage[parfill]{parskip}
+\usepackage{siunitx}
 \DeclareLanguageMapping{american}{american-apa}
 \addbibresource{refs.bib}
