--- a/refs.bib
+++ b/refs.bib
@@ -211,3 +211,30 @@ url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3646043\&tool=p
 volume = {8},
 year = {2013}
 }
+
+@misc{DanielLundqvistAndersFlykt1998,
+address = {Stockholm},
+author = {Lundqvist, Daniel and Flykt, Anders and \"{O}hman, Arne},
+booktitle = {Psychology},
+file = {:home/whn/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Flykt - 1998 - KDEF and AKDEF.pdf:pdf},
+isbn = {9163071649},
+mendeley-groups = {kindle,KinSync Folder},
+publisher = {Department of Clinical Neuroscience, Psychology section, Karolinska Institutet},
+title = {{The Karolinska directed emotional faces - KDEF}},
+year = {1998}
+}
+@article{Goeleven2008,
+author = {Goeleven, Ellen and {De Raedt}, Rudi and Leyman, Lemke and Verschuere, Bruno},
+doi = {10.1080/02699930701626582},
+file = {:home/whn/tmp/Goeleven et al (2008, C\&E).pdf:pdf},
+issn = {0269-9931},
+journal = {Cognition \& Emotion},
+mendeley-groups = {mag\_dsv},
+month = sep,
+number = {6},
+pages = {1094--1118},
+title = {{The Karolinska Directed Emotional Faces: A validation study}},
+url = {http://www.tandfonline.com/doi/abs/10.1080/02699930701626582},
+volume = {22},
+year = {2008}
+}
