--- a/refs.bib
+++ b/refs.bib
@@ -16,7 +16,7 @@ year = {2012}
 }
 
 @article{Scherer2005,
-author = {Scherer, K R},
+author = {Scherer, Klaus R},
 doi = {10.1177/0539018405058216},
 file = {:Users/whn/data/mendeley/Scherer - 2005 - What are emotions And how can they be measured.pdf:pdf},
 issn = {0539-0184},
@@ -237,4 +237,41 @@ title = {{The Karolinska Directed Emotional Faces: A validation study}},
 url = {http://www.tandfonline.com/doi/abs/10.1080/02699930701626582},
 volume = {22},
 year = {2008}
+}
+
+@article{Langner2010,
+author = {Langner, Oliver and Dotsch, Ron and Bijlstra, Gijsbert and Wigboldus, Daniel H. J. and Hawk, Skyler T. and van Knippenberg, Ad},
+doi = {10.1080/02699930903485076},
+file = {:home/whn/tmp/ContentServer.pdf:pdf},
+isbn = {0269993090348},
+issn = {0269-9931},
+journal = {Cognition \& Emotion},
+keywords = {be one of the,beings accomplish,carry a wealth of,complex tasks that human,emotion,face database,face processing may well,faces,gaze direction,including,most,social information,validation},
+mendeley-groups = {mag\_dsv},
+month = dec,
+number = {8},
+pages = {1377--1388},
+title = {{Presentation and validation of the Radboud Faces Database}},
+url = {http://www.tandfonline.com/doi/abs/10.1080/02699930903485076},
+volume = {24},
+year = {2010}
+}
+
+@MISC{matsumoto1988japanese,
+  title={Japanese and Caucasian facial expressions of emotion and neutral faces},
+  author={Matsumoto, David and Ekman, Paul},
+  year={1988},
+  publisher={els autors}
+}
+
+@article{Biehl1997,
+author = {Biehl, Michael and Matsumoto, David and Ekman, Paul},
+file = {:home/whn/tmp/ContentServer (1).pdf:pdf},
+journal = {Journal of Nonverbal \ldots},
+mendeley-groups = {mag\_dsv},
+number = {1},
+title = {{Matsumoto and Ekman's Japanese and Caucasian Facial Expressions of Emotion (JACFEE): Reliability data and cross-national differences}},
+url = {http://link.springer.com/article/10.1023/A:1024902500935},
+volume = {21},
+year = {1997}
 }
