--- a/refs.bib
+++ b/refs.bib
@@ -275,3 +275,19 @@ url = {http://link.springer.com/article/10.1023/A:1024902500935},
 volume = {21},
 year = {1997}
 }
+
+@article{Mayer2003,
+author = {Mayer, John D. and Salovey, Peter and Caruso, David R. and Sitarenios, Gill},
+doi = {10.1037/1528-3542.3.1.97},
+file = {:home/whn/Documents/Mendeley Desktop/Emotion/Mayer et al.\_2003\_Measuring emotional intelligence with the MSCEIT V2.0.pdf:pdf},
+issn = {1528-3542},
+journal = {Emotion},
+mendeley-groups = {mag\_dsv},
+number = {1},
+pages = {97--105},
+title = {{Measuring emotional intelligence with the MSCEIT V2.0.}},
+url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/1528-3542.3.1.97},
+volume = {3},
+year = {2003}
+}
+
