add pagebreak between sections

--- a/preamble.tex
+++ b/preamble.tex
@@ -14,3 +14,6 @@
 \usepackage{siunitx}
 \DeclareLanguageMapping{american}{american-apa}
 \addbibresource{refs.bib}
+
+\let\stdsection\section
+\renewcommand\section{\newpage\stdsection}
