--- a/refs.bib
+++ b/refs.bib
@@ -16,7 +16,7 @@ year = {2012}
 }
 
 @article{Scherer2005,
-author = {Scherer, Klaus R},
+author = {Scherer, K. R.},
 doi = {10.1177/0539018405058216},
 file = {:Users/whn/data/mendeley/Scherer - 2005 - What are emotions And how can they be measured.pdf:pdf},
 issn = {0539-0184},
@@ -97,7 +97,7 @@ year = {2012}
 
 @article{Fontaine2007,
 abstract = {For more than half a century, emotion researchers$\backslash$nhave attempted to establish the dimensional space that most economically$\backslash$naccounts for similarities and differences in emotional experience.$\backslash$nToday, many researchers focus exclusively on two-dimensional models$\backslash$ninvolving valence and arousal. Adopting a theoretically based approach,$\backslash$nwe show for three languages that four dimensions are needed to satisfactorily$\backslash$nrepresent similarities and differences in the meaning of emotion$\backslash$nwords. In order of importance, these dimensions are evaluation pleasantness,$\backslash$npotency-control, activation-arousal, and unpredictability. They were$\backslash$nidentified on the basis of the applicability of 144 features representing$\backslash$nthe six components of emotions: (a) appraisals of events, (b) psychophysiological$\backslash$nchanges, (c) motor expressions, (d) action tendencies, (e) subjective$\backslash$nexperiences, and (f) emotion regulation.},
-author = {Fontaine, J R and Scherer, Klaus R and Roesch, Etienne B and Ellsworth, P},
+author = {Fontaine, J R and Scherer, K R and Roesch, Etienne B and Ellsworth, P},
 file = {:Users/whn/data/mendeley/Fontaine et al. - 2007 - The World of Emotions Is Not.pdf:pdf},
 journal = {Psychological Science},
 keywords = {SCAS,cross-cultural,dimensions,grid,humaine},
@@ -291,3 +291,45 @@ volume = {3},
 year = {2003}
 }
 
+@article{Baron2006,
+author = {Baron, RM},
+file = {:home/whn/Documents/Mendeley Desktop/Psicothema/Baron\_2006\_The Bar-On model of emotional-social intelligence (ESI).pdf:pdf},
+journal = {Psicothema},
+pages = {13--25},
+title = {{The Bar-On model of emotional-social intelligence (ESI)}},
+url = {http://dialnet.unirioja.es/servlet/articulo?codigo=4679040},
+volume = {18},
+year = {2006}
+}
+
+@article{McCleskey2014,
+author = {McCleskey, Jim},
+doi = {10.1108/IJOA-03-2012-0568},
+file = {:home/whn/Documents/Mendeley Desktop/International Journal of Organizational Analysis/McCleskey\_2014\_Emotional intelligence and leadership.pdf:pdf},
+issn = {1934-8835},
+journal = {International Journal of Organizational Analysis},
+mendeley-groups = {mag\_dsv},
+month = mar,
+number = {1},
+pages = {76--93},
+title = {{Emotional intelligence and leadership}},
+url = {http://www.emeraldinsight.com/doi/abs/10.1108/IJOA-03-2012-0568},
+volume = {22},
+year = {2014}
+}
+
+@article{McCleskey2014,
+author = {McCleskey, Jim},
+doi = {10.1108/IJOA-03-2012-0568},
+file = {:home/whn/Documents/Mendeley Desktop/International Journal of Organizational Analysis/McCleskey\_2014\_Emotional intelligence and leadership.pdf:pdf},
+issn = {1934-8835},
+journal = {International Journal of Organizational Analysis},
+mendeley-groups = {mag\_dsv},
+month = mar,
+number = {1},
+pages = {76--93},
+title = {{Emotional intelligence and leadership}},
+url = {http://www.emeraldinsight.com/doi/abs/10.1108/IJOA-03-2012-0568},
+volume = {22},
+year = {2014}
+}
