--- a/refs.bib
+++ b/refs.bib
@@ -333,3 +333,28 @@ url = {http://www.emeraldinsight.com/doi/abs/10.1108/IJOA-03-2012-0568},
 volume = {22},
 year = {2014}
 }
+
+@article{Bar-On1997,
+author = {Bar-On, R},
+file = {:Users/whn/data/mendeley/EQ-i\_Info\_Page.pdf:pdf},
+journal = {Multi-Health Systems},
+mendeley-groups = {mag\_dsv},
+title = {{Emotional Quotient-Inventory (BarOn EQ-i): Technical Manual }},
+year = {1997}
+}
+
+@article{GrubbIII2007,
+abstract = {This study investigated the fakability of the Emotional Quotient Inventory Short Form (EQ-i:S), a mixed-model emotional intelligence test developed by Bar-On (2002). A sample of 229 undergraduate students from a southeastern university completed a battery of selection and assessment measures in both an honest and faking good condition. When responded to honestly, the EQ-i:Sis predicted by The Big Five with a multiple correlation of .79. Therefore, the EQ-i:S can be viewed as an aggregation of The Big Five constructs. When faking, respondents were able to improve scores on the EQ-i:S, each of its subtests, and each of The Big Five measures. Respondents improved scores on the EQ-i:S by .83 SD. Faking on the EQ-i:S was primarily predicted by cognitive ability and agreeableness. The relative ease with which respondents can substantially raise their scores limits the value of the EQ-i:S as an applicant screening tool. The substantial extent to which the EQ-i:S is predicted by The Big Five casts doubt on the construct of emotional intelligence as operationalized in the EQ-i:S.},
+author = {Grubb, W. Lee and McDaniel, Michael A.},
+doi = {10.1207/s15327043hup2001\_3},
+file = {:Users/whn/data/mendeley/ContentServer(2).pdf:pdf},
+isbn = {0895-9285 ISE: 1532-7043},
+issn = {0895-9285},
+journal = {Human Performance},
+mendeley-groups = {mag\_dsv},
+number = {1},
+pages = {43--59},
+title = {{The Fakability of Bar-On's Emotional Quotient Inventory Short Form: Catch Me if You Can}},
+volume = {20},
+year = {2007}
+}
